fix: Adjust some small spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --color-primary: #031625;
   --color-secondary: #0f192c;
   --color-accent: #4ddeb7;
-  --nav-height: 91px;
+  --nav-height: 107px;
 
   font-optical-sizing: auto;
   font-synthesis: none;
